fine tune the settings for rendering a single page including extra blank rows of fixed height

--- a/pdf_attendance_sheet_template.html
+++ b/pdf_attendance_sheet_template.html
@@ -33,6 +33,13 @@
             <td></td>
         </tr>
         {% endfor %}
+        {% for idx in range(number_of_extra_rows) %}
+        <tr style="height:0.55cm;">
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        {% endfor %}
     </table>
 </body>
 </html>
